# CV_proj_univ

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TASK.md  docker-compose.yml  pyproject.toml
configs/: default.yaml  hands.yaml  local.yaml  smoke.yaml
dataset/: README.roboflow.txt  data.yaml
docs/: METRICS.md  TASK.md
observability/: nginx.conf  prometheus.yml
poker_yolo/: __init__.py  augmentations.py  benchmark_grids.py  callbacks.py  classify_results.py  cli.py  config.py  detect_hand_cli.py  device.py  grafana_artifacts.py  hands.py  html_report.py  infer.py  infer_source.py  kaggle_dataset.py  logging_config.py  mlflow_phase.py  mlflow_utils.py  monitoring.py  observability.py  paths.py  pipeline.py  predictions.py  preflight.py  reporting.py  train.py  training_curves.py  ultralytics_metrics.py  validate.py
scripts/: backfill_grafana_artifacts.py  detect_poker_hand.py  entrypoint.sh  prepare_hands_dataset.py  resolve_device.py  run_full_train.ps1  split_grafana_dashboards.py
tests/: conftest.py  test_augmentations.py  test_benchmark_ground_truth.py  test_callbacks.py  test_cli.py  test_combo_grids.py  test_config.py  test_dataset.py  test_device.py  test_grafana_artifacts.py  test_hands.py  test_hands_benchmark_stats.py  test_html_report.py  test_infer_source.py  test_kaggle_dataset.py  test_logging.py  test_mlflow_utils.py  test_monitoring.py  test_observability.py  test_pipeline.py  test_predictions.py  test_preflight.py  test_reporting.py  test_training_curves.py  test_validate.py
(+146 files in other folders)
