[project]
name = "poker-yolo"
version = "0.1.0"
description = "YOLOv8 training pipeline for poker card detection"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "pytorch-lightning>=2.2.0",
    "ultralytics>=8.3.0",
    "mlflow>=2.14.0",
    "pyyaml>=6.0",
    "opencv-python-headless>=4.9.0",
    "pillow>=10.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.8.0",
    "albumentations>=1.4.0",
    "psutil>=5.9.0",
]

[project.scripts]
poker-yolo = "poker_yolo.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["poker_yolo"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/dataset",
  "/runs",
  "/.venv",
  "/dist",
]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
filterwarnings = [
    "ignore::UserWarning:albumentations.*",
]
